Fixed overflow text in notifications preview

--- a/src/app/shell/header/notification-list/notification-list.component.scss
+++ b/src/app/shell/header/notification-list/notification-list.component.scss
@@ -46,3 +46,9 @@
 .notificationText > span {
   font-size: 13px !important;
 }
+
+.notificationText {
+  overflow-x: auto;
+  word-wrap: break-word;
+  white-space: normal;
+}
